Fix special card text spacing

--- a/src/components/SpecialCard/SpecialCard.scss
+++ b/src/components/SpecialCard/SpecialCard.scss
@@ -43,5 +43,7 @@
     font-size: 0.9rem;
 
     padding: 0.75rem 1rem;
+
+    height: 100%;
   }
 }
